--- a/SignUpDaily/SignUpPage.xaml
+++ b/SignUpDaily/SignUpPage.xaml
@@ -6,29 +6,43 @@
              xmlns:local="clr-namespace:SignUpDaily.CustomControls"
              mc:Ignorable="d"
              x:Class="Pages.SignUpPage">
+   
     <ContentPage.Content>
-
+      
         <Grid BackgroundColor="{StaticResource BloodyRed}">
 
             <Grid.RowDefinitions>
-                <RowDefinition Height="4*"/>
-                <RowDefinition Height="1.2*"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="0.75*"/>
+                <RowDefinition Height="250"/>
+                <RowDefinition Height="60"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="60"/>
                 <RowDefinition Height="Auto"/>
-                <RowDefinition Height="0.75*"/>
-                <RowDefinition Height="70"/>
+                <RowDefinition Height="40"/>
+               
             </Grid.RowDefinitions>
                 
 
             <Grid.Resources>
                 <Style TargetType="local:BorderlessEntry">
-                    <Setter Property="Margin" Value="30,0,0,0"/>
+                    <Setter Property="Margin" Value="0"/>
+                    <Setter Property="TextColor" Value="White"/>
                     <Setter Property="BackgroundColor" Value="{StaticResource BloodyRed}"/>
                     <Setter Property="FontSize" Value="Small"/>
                     <Setter Property="PlaceholderColor" Value="White"/>
+                </Style>
+
+                <Style TargetType="BoxView">
+                    <Setter Property="Margin" Value="0"/>
+                    <Setter Property="VerticalOptions" Value="End"/>
+                    <Setter Property="BackgroundColor" Value="White"/>
+                    <Setter Property="HeightRequest" Value="1.5"/>
+                </Style>
+
+                <Style TargetType="StackLayout">
+                     <Setter Property="Margin" Value="30,0,30,0"/>
+                    <Setter Property="Spacing" Value="0"/>
                 </Style>
 
             </Grid.Resources>
@@ -37,29 +51,37 @@
             <Image
                    Grid.Row="0"
                    HorizontalOptions="Center"
-                   VerticalOptions="Fill"
+                   VerticalOptions="CenterAndExpand"
                    BackgroundColor="White"
                    Source="pinteresticon"
-                   Margin="0,50,0,30"/>
+                   Margin="0,70,0,30"/>
 
             <!--Sign up area-->
 
             <Label
                 Grid.Row="1"
-                VerticalOptions="Fill"
+                VerticalOptions="Start"
                 Text="Sign up"
                 TextColor="White"
                 FontSize="Title"
                 FontAttributes="Bold"
                 Margin="30,0,0,0"/>
 
-            <local:BorderlessEntry Grid.Row="2" Placeholder="Name"/>
-            
-            <local:BorderlessEntry Grid.Row="3" Placeholder="Email"/>
-            
-            <local:BorderlessEntry Grid.Row="4" Placeholder="Password"
-                   IsPassword="True" />
+           <StackLayout Grid.Row="2">
+             <local:BorderlessEntry VerticalOptions="Start" Placeholder="Name"/>
+             <BoxView/>
+           </StackLayout>
 
+            <StackLayout Grid.Row="3" >
+             <local:BorderlessEntry VerticalOptions="Start" Placeholder="Email"/>
+             <BoxView/>
+           </StackLayout>
+
+            <StackLayout Grid.Row="4" >
+             <local:BorderlessEntry VerticalOptions="Start" Placeholder="Password" IsPassword="True"/>
+             <BoxView/>
+           </StackLayout>
+       
             <!--Signup button-->
             <Button Grid.Row="5"
                     Text="Sign up"
@@ -67,7 +89,7 @@
                     FontSize="Medium"
                     FontAttributes="Bold"
                     CornerRadius="25"
-                    Margin="0,0,0,0"
+                    Margin="0,20,0,0"
                     WidthRequest="150"
                     VerticalOptions="Fill"
                     HorizontalOptions="Center"
